# Calcpy

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  python-package-conda.yml
Calcpy/: Errorcalc.py  NonLinEq.py  NumEigenv.py  NumLinEqu.py  ODE.py  __init__.py  numdiff.py  numint.py
NumKit/: BVP.py  Errorcalc.py  Interpolation.py  MC.py  NonLinEq.py  NumEigenv.py  NumLinEqu.py  ODE.py  PDE.py  __init__.py  numdiff.py  numint.py
WOP/: BVP.py
tests/: test_BVP.py  test_Eigenv.py  test_Errorcalc.py  test_MC.py  test_NonLinEqu.py  test_NumLinEqu.py  test_ODE.py  test_PDE.py  test_numint.py
