[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Calcpy"
version = "0.2.0"
description = "A simple Python library for numerical mathematical calculations and its utility functions."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Tim Peinkofer", email = "tim.peinkofer@student.uni-tuebingen.de" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/TimPeinkofer/Calcpy"
Bug-Tracker = "https://github.com/TimPeinkofer/Calcpy/issues"